<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌中围棋</string>
    <!-- 主界面Tab -->
    <string name="tab_situation">时局</string>
    <string name="tab_live">直播</string>
    <string name="tab_study">学习</string>
    <string name="tab_favorite">收藏</string>
    <string name="tab_sort">分类</string>
    <!-- 主界面Title -->
    <string name="situation_title_text">精彩时局</string>
    <string name="live_title_text">赛事直播</string>
    <string name="sort_title_text">分类棋谱</string>
    <string name="favorite_title_text">我的收藏</string>
    <string name="study_title_text">学习提高</string>
    <!-- 本地棋谱 -->
    <string name="sdcard_title_text">本地棋谱</string>
    <string name="scan">扫描</string>
    <string name="scaning">扫描中&#8230;</string>
    <string name="open_local_sgf">打开本地棋谱</string>
    <string name="invalid_sgf_file">无效的sgf文件</string>
    <!-- 提示 -->
    <string name="refreshing">正在刷新棋谱列表&#8230;</string>
    <string name="server_connect_error">服务器连接失败</string>
    <string name="server_connect_timeout">服务器连接超时</string>
    <string name="downloading">正在获取棋谱信息&#8230;</string>
    <string name="importing">正在导入&#8230;</string>
    <string name="click_to_load_more">点击加载更多</string>
    <string name="click_to_load_more_running">正在加载&#8230;</string>
    <string name="search_hint">搜索棋手，赛事，时间等</string>
    <string name="searching">正在搜索，请稍候&#8230;</string>
    <string name="db_connect_error">数据库查询失败</string>
    <string name="manual_favorite_success">棋谱收藏成功!</string>
    <string name="manual_favorite_error">棋谱收藏失败!</string>
    <string name="delete_manual_favorite_success">取消该棋谱收藏成功！</string>
    <string name="delete_manual_favorite_error">取消该棋谱收藏失败！</string>
    <string name="loading">正在加载，请稍候&#8230;</string>
    <string name="live_listview_empty">暂时没有赛事直播哦，请稍后重试！</string>
    <string name="manual_refreshing">正在刷新，请稍候&#8230;</string>
    <string name="video_loading">正在获取视频地址，请稍候&#8230;</string>
    <string name="video_open_fail_can_not_find_video_player">打开视频失败，未能找到视频播放器！</string>
    <string name="video_open_fail_can_not_find_browser">打开视频失败，未能找到浏览器！</string>
    <!-- 主界面菜单 -->
    <string name="main_menu_feedback">反馈</string>
    <string name="main_menu_setting">设置</string>
    <!-- 设置界面 -->
    <string name="setting_title_text">偏好设置</string>
    <string name="about_title_text">关于软件</string>
    <string name="local_version">本地版本：%s</string>
    <string name="server_version">最新版本：%s</string>
    <string name="qq_group">棋友交流QQ群：278743263</string>
    <string name="qq">开发者QQ：397093109</string>
    <string name="app_info">做最好用的掌中围棋软件!</string>
    <!-- 棋谱界面 -->
    <string name="chess_board_color_picker_dialog_title">点击圆环中央选定颜色</string>
    <string name="chess_piece_style_choose_dialog_title">棋子样式</string>
    <string name="no_branch">没有更多的变化图</string>
    <!-- gnugo -->
    <string name="waitProgressFinalScoreMessage">正在计算实地 ，请稍候&#8230;</string>

</resources>